// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Four Year Plan Page Prerequisite course 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div>
        <div
          class="drag-drop"
        >
          <div
            style="overflow: hidden; clear: both;"
          >
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 1 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 2 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 3 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 4 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 5 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 6 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 7 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 8 
 Spring 
 Credits 0
            </div>
            <button
              data-testid="ExportButton"
            >
              Export Schedule
            </button>
          </div>
          <div
            class="class-dropdown"
            style="overflow: hidden; clear: both;"
          >
            <div
              class="MuiBox-root css-8atqhb"
            >
              <div
                class="MuiBox-root css-1gsv261"
              >
                <div
                  class="MuiTabs-root css-1ujnqem-MuiTabs-root"
                >
                  <div
                    class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
                    style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                  />
                  <div
                    class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      aria-label="filter tab options"
                      class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                      role="tablist"
                    >
                      <button
                        aria-controls="simple-tabpanel-0"
                        aria-selected="true"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="category-tab"
                        id="simple-tab-0"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        Category
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-1"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="subjectnumber-tab"
                        id="simple-tab-1"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Subject/Number
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-2"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="name-tab"
                        id="simple-tab-2"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Name
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-3"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="credit-tab"
                        id="simple-tab-3"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Credit
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <span
                      class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="simple-tab-0"
                data-testid="category-panel"
                id="simple-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root css-19midj6"
                >
                  <div
                    class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-stf7qh-MuiAutocomplete-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        for=":r8:"
                        id=":r8:-label"
                      >
                        Course Category
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-invalid="false"
                          autocapitalize="none"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                          id=":r8:"
                          role="combobox"
                          spellcheck="false"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiAutocomplete-endAdornment css-1q60rmi-MuiAutocomplete-endAdornment"
                        >
                          <button
                            aria-label="Open"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                            tabindex="-1"
                            title="Open"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="ArrowDropDownIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                        >
                          <legend
                            class="css-yjsfm1"
                          >
                            <span>
                              Course Category
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="simple-tab-1"
                data-testid="subjectnumber-panel"
                hidden=""
                id="simple-tabpanel-1"
                role="tabpanel"
              />
              <div
                aria-labelledby="simple-tab-2"
                data-testid="name-panel"
                hidden=""
                id="simple-tabpanel-2"
                role="tabpanel"
              />
              <div
                aria-labelledby="simple-tab-3"
                data-testid="credit-panel"
                hidden=""
                id="simple-tabpanel-3"
                role="tabpanel"
              />
            </div>
            <div
              class="MuiBox-root css-1w0cc5a"
            />
          </div>
          <div
            class="right-information-box"
          >
            <div
              class="right-information-box-header"
            >
              <div
                class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1pskylb-MuiAutocomplete-root"
              >
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-invalid="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                      id=":ra:"
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                    <div
                      class="MuiAutocomplete-endAdornment css-1q60rmi-MuiAutocomplete-endAdornment"
                    >
                      <button
                        aria-label="Open"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                        tabindex="-1"
                        title="Open"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="right-information-box-content"
            >
              <p
                class="right-information-box-description"
              >
                Select a category and drag a course onto a semester to begin planning.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Four Year Plan Page duplicate courses 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div>
        <div
          class="drag-drop"
        >
          <div
            style="overflow: hidden; clear: both;"
          >
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 1 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 2 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 3 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 4 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 5 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 6 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 7 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 8 
 Spring 
 Credits 0
            </div>
            <button
              data-testid="ExportButton"
            >
              Export Schedule
            </button>
          </div>
          <div
            class="class-dropdown"
            style="overflow: hidden; clear: both;"
          >
            <div
              class="MuiBox-root css-8atqhb"
            >
              <div
                class="MuiBox-root css-1gsv261"
              >
                <div
                  class="MuiTabs-root css-1ujnqem-MuiTabs-root"
                >
                  <div
                    class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
                    style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                  />
                  <div
                    class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      aria-label="filter tab options"
                      class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                      role="tablist"
                    >
                      <button
                        aria-controls="simple-tabpanel-0"
                        aria-selected="true"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="category-tab"
                        id="simple-tab-0"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        Category
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-1"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="subjectnumber-tab"
                        id="simple-tab-1"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Subject/Number
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-2"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="name-tab"
                        id="simple-tab-2"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Name
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-3"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="credit-tab"
                        id="simple-tab-3"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Credit
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <span
                      class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="simple-tab-0"
                data-testid="category-panel"
                id="simple-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root css-19midj6"
                >
                  <div
                    class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-stf7qh-MuiAutocomplete-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        for=":r4:"
                        id=":r4:-label"
                      >
                        Course Category
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-invalid="false"
                          autocapitalize="none"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                          id=":r4:"
                          role="combobox"
                          spellcheck="false"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiAutocomplete-endAdornment css-1q60rmi-MuiAutocomplete-endAdornment"
                        >
                          <button
                            aria-label="Open"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                            tabindex="-1"
                            title="Open"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="ArrowDropDownIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                        >
                          <legend
                            class="css-yjsfm1"
                          >
                            <span>
                              Course Category
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="simple-tab-1"
                data-testid="subjectnumber-panel"
                hidden=""
                id="simple-tabpanel-1"
                role="tabpanel"
              />
              <div
                aria-labelledby="simple-tab-2"
                data-testid="name-panel"
                hidden=""
                id="simple-tabpanel-2"
                role="tabpanel"
              />
              <div
                aria-labelledby="simple-tab-3"
                data-testid="credit-panel"
                hidden=""
                id="simple-tabpanel-3"
                role="tabpanel"
              />
            </div>
            <div
              class="MuiBox-root css-1w0cc5a"
            />
          </div>
          <div
            class="right-information-box"
          >
            <div
              class="right-information-box-header"
            >
              <div
                class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1pskylb-MuiAutocomplete-root"
              >
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-invalid="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                      id=":r6:"
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                    <div
                      class="MuiAutocomplete-endAdornment css-1q60rmi-MuiAutocomplete-endAdornment"
                    >
                      <button
                        aria-label="Open"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                        tabindex="-1"
                        title="Open"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="right-information-box-content"
            >
              <p
                class="right-information-box-description"
              >
                Select a category and drag a course onto a semester to begin planning.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Four Year Plan Page renders 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div>
        <div
          class="drag-drop"
        >
          <div
            style="overflow: hidden; clear: both;"
          >
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 1 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 2 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 3 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 4 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 5 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 6 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 7 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 8 
 Spring 
 Credits 0
            </div>
            <button
              data-testid="ExportButton"
            >
              Export Schedule
            </button>
          </div>
          <div
            class="class-dropdown"
            style="overflow: hidden; clear: both;"
          >
            <div
              class="MuiBox-root css-8atqhb"
            >
              <div
                class="MuiBox-root css-1gsv261"
              >
                <div
                  class="MuiTabs-root css-1ujnqem-MuiTabs-root"
                >
                  <div
                    class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
                    style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                  />
                  <div
                    class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      aria-label="filter tab options"
                      class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                      role="tablist"
                    >
                      <button
                        aria-controls="simple-tabpanel-0"
                        aria-selected="true"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="category-tab"
                        id="simple-tab-0"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        Category
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-1"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="subjectnumber-tab"
                        id="simple-tab-1"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Subject/Number
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-2"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="name-tab"
                        id="simple-tab-2"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Name
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-3"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="credit-tab"
                        id="simple-tab-3"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Credit
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <span
                      class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="simple-tab-0"
                data-testid="category-panel"
                id="simple-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root css-19midj6"
                >
                  <div
                    class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-stf7qh-MuiAutocomplete-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        for=":r0:"
                        id=":r0:-label"
                      >
                        Course Category
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-invalid="false"
                          autocapitalize="none"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                          id=":r0:"
                          role="combobox"
                          spellcheck="false"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiAutocomplete-endAdornment css-1q60rmi-MuiAutocomplete-endAdornment"
                        >
                          <button
                            aria-label="Open"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                            tabindex="-1"
                            title="Open"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="ArrowDropDownIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                        >
                          <legend
                            class="css-yjsfm1"
                          >
                            <span>
                              Course Category
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="simple-tab-1"
                data-testid="subjectnumber-panel"
                hidden=""
                id="simple-tabpanel-1"
                role="tabpanel"
              />
              <div
                aria-labelledby="simple-tab-2"
                data-testid="name-panel"
                hidden=""
                id="simple-tabpanel-2"
                role="tabpanel"
              />
              <div
                aria-labelledby="simple-tab-3"
                data-testid="credit-panel"
                hidden=""
                id="simple-tabpanel-3"
                role="tabpanel"
              />
            </div>
            <div
              class="MuiBox-root css-1w0cc5a"
            />
          </div>
          <div
            class="right-information-box"
          >
            <div
              class="right-information-box-header"
            >
              <div
                class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1pskylb-MuiAutocomplete-root"
              >
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-invalid="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                      id=":r2:"
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                    <div
                      class="MuiAutocomplete-endAdornment css-1q60rmi-MuiAutocomplete-endAdornment"
                    >
                      <button
                        aria-label="Open"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                        tabindex="-1"
                        title="Open"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="right-information-box-content"
            >
              <p
                class="right-information-box-description"
              >
                Select a category and drag a course onto a semester to begin planning.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Four Year Plan incompatible Season 1`] = `
<body>
  <div>
    <div
      data-testid="test-root-element"
    >
      <div>
        <div
          class="drag-drop"
        >
          <div
            style="overflow: hidden; clear: both;"
          >
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 1 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 2 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 3 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 4 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 5 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 6 
 Spring 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 7 
 Fall 
 Credits 0
            </div>
            <div
              data-testid="semester"
              style="height: 15rem; width: 19%; margin-right: .5rem; margin-bottom: .5rem; color: white; padding: 1rem; text-align: center; font-size: 1rem; line-height: normal; float: left; white-space: pre; background: rgb(0, 73, 144); border-radius: .5rem; overflow: auto; background-color: rgb(0, 73, 144);"
            >
              Semester 8 
 Spring 
 Credits 0
            </div>
            <button
              data-testid="ExportButton"
            >
              Export Schedule
            </button>
          </div>
          <div
            class="class-dropdown"
            style="overflow: hidden; clear: both;"
          >
            <div
              class="MuiBox-root css-8atqhb"
            >
              <div
                class="MuiBox-root css-1gsv261"
              >
                <div
                  class="MuiTabs-root css-1ujnqem-MuiTabs-root"
                >
                  <div
                    class="MuiTabs-scrollableX MuiTabs-hideScrollbar css-agdkjh-MuiTabs-scrollbarSize"
                    style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                  />
                  <div
                    class="MuiTabs-scroller MuiTabs-hideScrollbar MuiTabs-scrollableX css-69z67c-MuiTabs-scroller"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      aria-label="filter tab options"
                      class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
                      role="tablist"
                    >
                      <button
                        aria-controls="simple-tabpanel-0"
                        aria-selected="true"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="category-tab"
                        id="simple-tab-0"
                        role="tab"
                        tabindex="0"
                        type="button"
                      >
                        Category
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-1"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="subjectnumber-tab"
                        id="simple-tab-1"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Subject/Number
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-2"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="name-tab"
                        id="simple-tab-2"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Name
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                      <button
                        aria-controls="simple-tabpanel-3"
                        aria-selected="false"
                        class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-1h9z7r5-MuiButtonBase-root-MuiTab-root"
                        data-testid="credit-tab"
                        id="simple-tab-3"
                        role="tab"
                        tabindex="-1"
                        type="button"
                      >
                        Credit
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <span
                      class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
                      style="left: 0px; width: 0px;"
                    />
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="simple-tab-0"
                data-testid="category-panel"
                id="simple-tabpanel-0"
                role="tabpanel"
              >
                <div
                  class="MuiBox-root css-19midj6"
                >
                  <div
                    class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-stf7qh-MuiAutocomplete-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        for=":rc:"
                        id=":rc:-label"
                      >
                        Course Category
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                      >
                        <input
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-invalid="false"
                          autocapitalize="none"
                          autocomplete="off"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                          id=":rc:"
                          role="combobox"
                          spellcheck="false"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiAutocomplete-endAdornment css-1q60rmi-MuiAutocomplete-endAdornment"
                        >
                          <button
                            aria-label="Open"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                            tabindex="-1"
                            title="Open"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                              data-testid="ArrowDropDownIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 10l5 5 5-5z"
                              />
                            </svg>
                            <span
                              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                        >
                          <legend
                            class="css-yjsfm1"
                          >
                            <span>
                              Course Category
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                aria-labelledby="simple-tab-1"
                data-testid="subjectnumber-panel"
                hidden=""
                id="simple-tabpanel-1"
                role="tabpanel"
              />
              <div
                aria-labelledby="simple-tab-2"
                data-testid="name-panel"
                hidden=""
                id="simple-tabpanel-2"
                role="tabpanel"
              />
              <div
                aria-labelledby="simple-tab-3"
                data-testid="credit-panel"
                hidden=""
                id="simple-tabpanel-3"
                role="tabpanel"
              />
            </div>
            <div
              class="MuiBox-root css-1w0cc5a"
            />
          </div>
          <div
            class="right-information-box"
          >
            <div
              class="right-information-box-header"
            >
              <div
                class="MuiAutocomplete-root MuiAutocomplete-hasPopupIcon css-1pskylb-MuiAutocomplete-root"
              >
                <div
                  class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-wb57ya-MuiFormControl-root-MuiTextField-root"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-154xyx0-MuiInputBase-root-MuiOutlinedInput-root"
                  >
                    <input
                      aria-autocomplete="list"
                      aria-expanded="false"
                      aria-invalid="false"
                      autocapitalize="none"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-nxo287-MuiInputBase-input-MuiOutlinedInput-input"
                      id=":re:"
                      role="combobox"
                      spellcheck="false"
                      type="text"
                      value=""
                    />
                    <div
                      class="MuiAutocomplete-endAdornment css-1q60rmi-MuiAutocomplete-endAdornment"
                    >
                      <button
                        aria-label="Open"
                        class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                        tabindex="-1"
                        title="Open"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                        <span
                          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                        />
                      </button>
                    </div>
                    <fieldset
                      aria-hidden="true"
                      class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                    >
                      <legend
                        class="css-ihdtdm"
                      >
                        <span
                          class="notranslate"
                        >
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="right-information-box-content"
            >
              <p
                class="right-information-box-description"
              >
                Select a category and drag a course onto a semester to begin planning.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
